syntax = "proto3";
package pryzmatics.statistics;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/pryzm-finance/pryzmatics/types/statistics";

message Misc {
  google.protobuf.Timestamp block_time = 1 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  string liquidity = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  uint64 wallets_count = 3;
  uint64 total_tx_count = 4;
  string error = 5;
}
